--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
+/* universal selector below */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* body below (element selectors) */
+
 body {
     background-color: #d9dcd6;
 }
+
+/* header and header properties (elements within the header) */
 
 header {
     padding: 20px;
@@ -15,16 +21,16 @@ header {
     color: #ffffff;
 }
 
-.header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +38,11 @@ header {
     font-size: 20px;
 }
 
-.header div ul {
+ul {
     list-style-type: none;
 }
 
-.header div ul li {
+li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,11 +56,11 @@ p {
     font-size: 16px;
 }
 
-.hero {
+.hero{
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    /* background-image: url("../images/digital-marketing-meeting.jpg");*/
     background-size: cover;
     background-position: center;
 }
@@ -86,54 +92,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* Condensed the below code to clean things up */
+.benefit-lead, .benefit-brand, .benefit-cost{
     margin-bottom: 32px;
-    color: #ffffff;
+    color:#ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+/*condensed the below code to clean things up*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -161,32 +136,20 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+/* SEO area bleow. condensed the below code to clean things up*/ 
+
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+/*condensed the below code to clean things up*/
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* footer info below */
 
 .footer {
     padding: 30px;
